# SE_exam

./: .gitignore  LICENCE  README.md  justfile  package-lock.json  pyproject.toml
.github/workflows/: pythob-app.yml  python-app.yml
backend/: dice.py  lobbies.py  main.py
backend/handles/: gamepage.py  homepage.py
backend/tests/: dice_test.py
dice_poker/: dice.py
dice_poker/tests/: dice_test.py
frontend/templates/: gamepage.html  homepage.html  templates.py
static/css/: output.css
templates/: gamepage.html
