[tool.poetry]
name = "se-exam"
version = "0.1.0"
description = ""
authors = ["kohlrabka <DmitriyVlasovDV1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
