[tool.poetry]
name = "se-exam"
version = "0.1.0"
description = ""
authors = ["kohlrabka <DmitriyVlasovDV1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
jinja2 = "^3.1.4"
pytest = "^8.3.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
